scss/_09-widgets.scss
/* 10.0 Widgets*/
.widget-area-top-footer,
.widget-areas-footer {
  background-color: var(--color-black);
  color: var(--color-white);

  a {
    color: var(--color-white);
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }
}

.widget-title {
  margin: 0 0 .5em;
  padding: 0 0 0.125em;
  border-bottom: 0.0625em solid var(--color-scheme);
}

.widget {
  ul {
    list-style: none;
    padding: 0;
    margin: 0;

    ul {
      margin: 0 0 0 1em;
    }
  }

  li {
    line-height: 2;
    margin: 0;
  }

  a {
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }

  table {
    width: 100%;
  }
}

.widget_calendar {
  a {
    font-weight: 600;
    text-decoration: underline;
  }

  caption {
    margin-bottom: 0.5em;
  }

  table,
  td,
  th {
    border-color: var(--color-scheme);
  }

  table {
    display: table !important;
    table-layout: fixed;

    a {
      text-decoration: none;
      font-weight: var(--font-weight--bold);
    }
  }

  td,
  th {
    text-align: center;
    padding: 0.5em;
  }

  thead {
    background-color: var(--color-scheme);
  }

  .wp-calendar-nav {
    display: flex;
    justify-content: space-between;
    margin-top: 0.5em;

    a {
      text-decoration: none;
    }
  }
}

.widget-area-top-footer {
  .widget_calendar table a {
    color: var(--color-scheme);
  }
}

